# truthness

./: .gitignore  README.md  pyproject.toml
config/: general.yaml  models.yaml  prompts.yaml
data/: dummy_model.json  golden.json
results/: dummy_model.json
truthness/: evaluate.py  facts.py  snippet.py  utils.py
truthness/metrics/: __init__.py  base.py  ioc.py  iou.py  ioс.py  multiple.py  precision.py  recall.py
